# Computer-Vision

./: CMakeLists.txt  README.md
Guiao1/: CMakeLists.txt
Guiao1/Aula2_ex3/: main.cpp
Guiao1/aula2_ex4/: main.cpp
Guiao1/aula2_ex5/: main.cpp
Guiao1/aula2_ex6/: main.cpp
Guiao1/aula2_ex7/: main.cpp  main_alt.cpp
Guiao2/: CMakeLists.txt
Guiao2/ex1/: ex1.cpp
Guiao2/ex2/: ex2.cpp
Guiao2/ex3/: ex3.cpp
Guiao2/ex4/: ex4.cpp
Guiao2/ex5/: ex5.cpp
Guiao2/ex6/: ex6.cpp
Guiao2/ex7/: ex7.cpp  ex7_1.cpp
Guiao3/: CMakeLists.txt
Guiao3/ex1/: ex1.cpp
Guiao3/ex2/: ex2.cpp
Guiao3/ex3/: ex3.cpp
Guiao3/ex4/: ex4.cpp
Guiao3/ex6/: ex6.cpp
Guiao4/: CMakeLists.txt  CamParams_subpix.xml  webcam.xml
Guiao4/ex1/: chessboard.cpp  chessboard_subpix.cpp
Guiao4/ex2/: chessboard_cube.cpp
Guiao4/ex3/: chessboard_cam.cpp
Guiao4/ex4/: camera_cube.cpp
Guiao5/ex1/: ex1.cpp
Guiao5/ex2/: ex2.cpp
Guiao5/ex3/: ex3.cpp
Guiao5/ex5/: ex5.cpp
Guiao6/: CMakeLists.txt  stereoParams.xml
Guiao6/ex1/: ex1.cpp
Guiao7/: CMakeLists.txt
Guiao7/ex1/: ex1.cpp
Guiao7/ex2/: ex2.cpp
Guiao7/ex3/: ex3.cpp
Guiao8/ex1/: ex1.cpp
Guiao8/ex2/: ex2.cpp
Guiao9/: CMakeLists.txt
Guiao9/ex1/: ex1.cpp
