cmake_minimum_required(VERSION 2.8)
project( Guiao2 )
find_package( OpenCV REQUIRED )
add_executable( ex1 ex1/ex1.cpp )
target_link_libraries( ex1  ${OpenCV_LIBS} )
add_executable( ex2 ex2/ex2.cpp )
target_link_libraries( ex2  ${OpenCV_LIBS} ${OpenCV_CFLAGS} )
add_executable( ex3 ex3/ex3.cpp )
target_link_libraries( ex3  ${OpenCV_LIBS} )
add_executable( ex4 ex4/ex4.cpp )
target_link_libraries( ex4  ${OpenCV_LIBS} )
add_executable( ex5 ex5/ex5.cpp )
target_link_libraries( ex5  ${OpenCV_LIBS} )
add_executable( ex6 ex6/ex6.cpp )
target_link_libraries( ex6  ${OpenCV_LIBS} )
add_executable( ex7 ex7/ex7.cpp )
target_link_libraries( ex7  ${OpenCV_LIBS} )
add_executable( ex7-1 ex7/ex7_1.cpp )
target_link_libraries( ex7-1  ${OpenCV_LIBS} )
