CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( calib )
FIND_PACKAGE( OpenCV REQUIRED )
#find_package(PCL 1.2 REQUIRED)

ADD_EXECUTABLE( calib ex1/chessboard.cpp )
TARGET_LINK_LIBRARIES( calib ${OpenCV_LIBS} )
ADD_EXECUTABLE( calib_subpix ex1/chessboard_subpix.cpp )
TARGET_LINK_LIBRARIES( calib_subpix ${OpenCV_LIBS} )
ADD_EXECUTABLE( chessboard_cube ex2/chessboard_cube.cpp )
TARGET_LINK_LIBRARIES( chessboard_cube ${OpenCV_LIBS} )
ADD_EXECUTABLE( chessboard_cam ex3/chessboard_cam.cpp )
TARGET_LINK_LIBRARIES( chessboard_cam ${OpenCV_LIBS} )
ADD_EXECUTABLE( camera_cube ex4/camera_cube.cpp )
TARGET_LINK_LIBRARIES( camera_cube ${OpenCV_LIBS} )
